kubernetes/nodeapp.yml
---
apiVersion: v1
kind: Service
metadata:
  name: node-http
  labels:
    app: node-app
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: node-http
  selector:
    app: node-app
---
kind: Service
apiVersion: v1
metadata:
  name: node-app-nodeport
spec:
  type: NodePort 
  ports:
    - nodePort: 31000
      port: 8080
  selector:
    app: node-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: node-app
  name: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: zendad/nodeapp:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds: 30
status: {}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-app
  labels:
    app: node-app
  annotations:
spec:
  rules:
  - host: mongo.dereckzenda.io
    http:
      paths:
      - path: /
        backend:
          serviceName: node-http
          servicePort: 8080
